// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel_info_header should match snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <ChannelIcon
      isActive={false}
      isArchived={false}
      isBot={false}
      isInfo={true}
      isUnread={false}
      membersCount={2}
      size={16}
      status="status"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      type="O"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#3d3c40",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
        }
      }
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Header"
          id="channel_info.header"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            Object {
              "adjacentParagraph": Object {
                "marginTop": 6,
              },
              "horizontalRule": Object {
                "backgroundColor": "#3d3c40",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": Object {
                "color": undefined,
                "padding": 5,
              },
            }
          }
          onChannelLinkPress={[MockFunction]}
          onPermalinkPress={[MockFunction]}
          textStyles={
            Object {
              "code": Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": Object {
                "fontFamily": "Menlo",
              },
              "del": Object {
                "textDecorationLine": "line-through",
              },
              "emph": Object {
                "fontStyle": "italic",
              },
              "error": Object {
                "color": "#fd5960",
              },
              "heading1": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": Object {
                "paddingBottom": 8,
              },
              "heading2": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": Object {
                "paddingBottom": 8,
              },
              "heading3": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": Object {
                "paddingBottom": 8,
              },
              "heading4": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": Object {
                "paddingBottom": 8,
              },
              "heading5": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": Object {
                "paddingBottom": 8,
              },
              "heading6": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": Object {
                "paddingBottom": 8,
              },
              "link": Object {
                "color": "#2389d7",
              },
              "mention": Object {
                "color": "#2389d7",
              },
              "mention_highlight": Object {
                "backgroundColor": "#ffe577",
                "color": "#166de0",
              },
              "strong": Object {
                "fontWeight": "bold",
              },
              "table_header_row": Object {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <FormattedText
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        Object {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when DM and hasGuests and is the teammate 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <ChannelIcon
      isActive={false}
      isArchived={false}
      isBot={false}
      isInfo={true}
      isUnread={false}
      membersCount={2}
      size={16}
      status="status"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      type="D"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#3d3c40",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
        }
      }
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 15,
        }
      }
    >
      <FormattedText
        defaultMessage="This person is a guest"
        id="channel.isGuest"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#3d3c40",
            "fontSize": 13,
            "marginBottom": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Header"
          id="channel_info.header"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            Object {
              "adjacentParagraph": Object {
                "marginTop": 6,
              },
              "horizontalRule": Object {
                "backgroundColor": "#3d3c40",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": Object {
                "color": undefined,
                "padding": 5,
              },
            }
          }
          onChannelLinkPress={[MockFunction]}
          onPermalinkPress={[MockFunction]}
          textStyles={
            Object {
              "code": Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": Object {
                "fontFamily": "Menlo",
              },
              "del": Object {
                "textDecorationLine": "line-through",
              },
              "emph": Object {
                "fontStyle": "italic",
              },
              "error": Object {
                "color": "#fd5960",
              },
              "heading1": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": Object {
                "paddingBottom": 8,
              },
              "heading2": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": Object {
                "paddingBottom": 8,
              },
              "heading3": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": Object {
                "paddingBottom": 8,
              },
              "heading4": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": Object {
                "paddingBottom": 8,
              },
              "heading5": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": Object {
                "paddingBottom": 8,
              },
              "heading6": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": Object {
                "paddingBottom": 8,
              },
              "link": Object {
                "color": "#2389d7",
              },
              "mention": Object {
                "color": "#2389d7",
              },
              "mention_highlight": Object {
                "backgroundColor": "#ffe577",
                "color": "#166de0",
              },
              "strong": Object {
                "fontWeight": "bold",
              },
              "table_header_row": Object {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <FormattedText
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        Object {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when DM and hasGuests but its me and not the teammate 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <ChannelIcon
      isActive={false}
      isArchived={false}
      isBot={false}
      isInfo={true}
      isUnread={false}
      membersCount={2}
      size={16}
      status="status"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      type="D"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#3d3c40",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
        }
      }
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Header"
          id="channel_info.header"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            Object {
              "adjacentParagraph": Object {
                "marginTop": 6,
              },
              "horizontalRule": Object {
                "backgroundColor": "#3d3c40",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": Object {
                "color": undefined,
                "padding": 5,
              },
            }
          }
          onChannelLinkPress={[MockFunction]}
          onPermalinkPress={[MockFunction]}
          textStyles={
            Object {
              "code": Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": Object {
                "fontFamily": "Menlo",
              },
              "del": Object {
                "textDecorationLine": "line-through",
              },
              "emph": Object {
                "fontStyle": "italic",
              },
              "error": Object {
                "color": "#fd5960",
              },
              "heading1": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": Object {
                "paddingBottom": 8,
              },
              "heading2": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": Object {
                "paddingBottom": 8,
              },
              "heading3": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": Object {
                "paddingBottom": 8,
              },
              "heading4": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": Object {
                "paddingBottom": 8,
              },
              "heading5": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": Object {
                "paddingBottom": 8,
              },
              "heading6": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": Object {
                "paddingBottom": 8,
              },
              "link": Object {
                "color": "#2389d7",
              },
              "mention": Object {
                "color": "#2389d7",
              },
              "mention_highlight": Object {
                "backgroundColor": "#ffe577",
                "color": "#166de0",
              },
              "strong": Object {
                "fontWeight": "bold",
              },
              "table_header_row": Object {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <FormattedText
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        Object {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when GM and hasGuests 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <ChannelIcon
      isActive={false}
      isArchived={false}
      isBot={false}
      isInfo={true}
      isUnread={false}
      membersCount={2}
      size={16}
      status="status"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      type="G"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#3d3c40",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
        }
      }
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 15,
        }
      }
    >
      <FormattedText
        defaultMessage="This group message has guests"
        id="channel.hasGuests"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#3d3c40",
            "fontSize": 13,
            "marginBottom": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Header"
          id="channel_info.header"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            Object {
              "adjacentParagraph": Object {
                "marginTop": 6,
              },
              "horizontalRule": Object {
                "backgroundColor": "#3d3c40",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": Object {
                "color": undefined,
                "padding": 5,
              },
            }
          }
          onChannelLinkPress={[MockFunction]}
          onPermalinkPress={[MockFunction]}
          textStyles={
            Object {
              "code": Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": Object {
                "fontFamily": "Menlo",
              },
              "del": Object {
                "textDecorationLine": "line-through",
              },
              "emph": Object {
                "fontStyle": "italic",
              },
              "error": Object {
                "color": "#fd5960",
              },
              "heading1": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": Object {
                "paddingBottom": 8,
              },
              "heading2": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": Object {
                "paddingBottom": 8,
              },
              "heading3": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": Object {
                "paddingBottom": 8,
              },
              "heading4": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": Object {
                "paddingBottom": 8,
              },
              "heading5": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": Object {
                "paddingBottom": 8,
              },
              "heading6": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": Object {
                "paddingBottom": 8,
              },
              "link": Object {
                "color": "#2389d7",
              },
              "mention": Object {
                "color": "#2389d7",
              },
              "mention_highlight": Object {
                "backgroundColor": "#ffe577",
                "color": "#166de0",
              },
              "strong": Object {
                "fontWeight": "bold",
              },
              "table_header_row": Object {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <FormattedText
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        Object {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when is group constrained 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <ChannelIcon
      isActive={false}
      isArchived={false}
      isBot={false}
      isInfo={true}
      isUnread={false}
      membersCount={2}
      size={16}
      status="status"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      type="O"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#3d3c40",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
        }
      }
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Header"
          id="channel_info.header"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            Object {
              "adjacentParagraph": Object {
                "marginTop": 6,
              },
              "horizontalRule": Object {
                "backgroundColor": "#3d3c40",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": Object {
                "color": undefined,
                "padding": 5,
              },
            }
          }
          onChannelLinkPress={[MockFunction]}
          onPermalinkPress={[MockFunction]}
          textStyles={
            Object {
              "code": Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": Object {
                "fontFamily": "Menlo",
              },
              "del": Object {
                "textDecorationLine": "line-through",
              },
              "emph": Object {
                "fontStyle": "italic",
              },
              "error": Object {
                "color": "#fd5960",
              },
              "heading1": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": Object {
                "paddingBottom": 8,
              },
              "heading2": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": Object {
                "paddingBottom": 8,
              },
              "heading3": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": Object {
                "paddingBottom": 8,
              },
              "heading4": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": Object {
                "paddingBottom": 8,
              },
              "heading5": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": Object {
                "paddingBottom": 8,
              },
              "heading6": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": Object {
                "paddingBottom": 8,
              },
              "link": Object {
                "color": "#2389d7",
              },
              "mention": Object {
                "color": "#2389d7",
              },
              "mention_highlight": Object {
                "backgroundColor": "#ffe577",
                "color": "#166de0",
              },
              "strong": Object {
                "fontWeight": "bold",
              },
              "table_header_row": Object {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <FormattedText
      defaultMessage="Members are managed by linked groups"
      id="mobile.routes.channelInfo.groupManaged"
    />
  </Text>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <FormattedText
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        Object {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;

exports[`channel_info_header should match snapshot when public channel and hasGuests 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": undefined,
      "borderBottomWidth": 1,
      "marginBottom": 40,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <ChannelIcon
      isActive={false}
      isArchived={false}
      isBot={false}
      isInfo={true}
      isUnread={false}
      membersCount={2}
      size={16}
      status="status"
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      type="O"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#3d3c40",
          "flex": 1,
          "fontSize": 15,
          "fontWeight": "600",
        }
      }
    >
      Channel name
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 15,
        }
      }
    >
      <FormattedText
        defaultMessage="This channel has guests"
        id="channel.channelHasGuests"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#3d3c40",
            "fontSize": 13,
            "marginBottom": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Purpose"
          id="channel_info.purpose"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
        >
          Purpose string
        </Text>
      </View>
    </TouchableHighlight>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 15,
        },
        null,
      ]
    }
  >
    <TouchableHighlight
      activeOpacity={0.85}
      delayPressOut={100}
      onLongPress={[Function]}
      underlayColor="black"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 15,
          }
        }
      >
        <FormattedText
          defaultMessage="Header"
          id="channel_info.header"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#3d3c40",
              "fontSize": 13,
              "marginBottom": 10,
            }
          }
        />
        <Connect(Markdown)
          baseTextStyle={
            Object {
              "color": "#3d3c40",
              "fontSize": 13,
              "lineHeight": 20,
            }
          }
          blockStyles={
            Object {
              "adjacentParagraph": Object {
                "marginTop": 6,
              },
              "horizontalRule": Object {
                "backgroundColor": "#3d3c40",
                "height": 0.5,
                "marginVertical": 10,
              },
              "quoteBlockIcon": Object {
                "color": undefined,
                "padding": 5,
              },
            }
          }
          onChannelLinkPress={[MockFunction]}
          onPermalinkPress={[MockFunction]}
          textStyles={
            Object {
              "code": Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "fontFamily": "Menlo",
              },
              "codeBlock": Object {
                "fontFamily": "Menlo",
              },
              "del": Object {
                "textDecorationLine": "line-through",
              },
              "emph": Object {
                "fontStyle": "italic",
              },
              "error": Object {
                "color": "#fd5960",
              },
              "heading1": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading1Text": Object {
                "paddingBottom": 8,
              },
              "heading2": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading2Text": Object {
                "paddingBottom": 8,
              },
              "heading3": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading3Text": Object {
                "paddingBottom": 8,
              },
              "heading4": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading4Text": Object {
                "paddingBottom": 8,
              },
              "heading5": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading5Text": Object {
                "paddingBottom": 8,
              },
              "heading6": Object {
                "fontSize": 17,
                "fontWeight": "700",
                "lineHeight": 25,
              },
              "heading6Text": Object {
                "paddingBottom": 8,
              },
              "link": Object {
                "color": "#2389d7",
              },
              "mention": Object {
                "color": "#2389d7",
              },
              "mention_highlight": Object {
                "backgroundColor": "#ffe577",
                "color": "#166de0",
              },
              "strong": Object {
                "fontWeight": "bold",
              },
              "table_header_row": Object {
                "fontWeight": "700",
              },
            }
          }
          value="Header string"
        />
      </View>
    </TouchableHighlight>
  </View>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": undefined,
          "flexDirection": "row",
          "fontSize": 12,
          "marginTop": 5,
        },
        Object {
          "paddingHorizontal": 15,
        },
        null,
      ]
    }
  >
    <FormattedText
      defaultMessage="Created by {creator} on "
      id="mobile.routes.channelInfo.createdBy"
      values={
        Object {
          "creator": "Creator",
        }
      }
    />
    <FormattedDate
      format="LL"
      value={123}
    />
  </Text>
</View>
`;
